<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/home"
            android:checked="true" />
        <item
            android:id="@+id/components"
            android:icon="@drawable/outline_tips_and_updates_24"
            android:title="@string/basic_components" />
        <item
            android:id="@+id/prompts"
            android:icon="@drawable/outline_ballot_24"
            android:title="@string/prompts" />
        <item
            android:id="@+id/navigation"
            android:icon="@drawable/outline_touch_app_24"
            android:title="@string/navigation" />
        <item
            android:id="@+id/list"
            android:icon="@drawable/outline_view_list_24"
            android:title="@string/list" />
    </group>
</menu>