<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingTop="16dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/tabs_header"
        android:textAppearance="?attr/textAppearanceOverline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_label_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_label_2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_label_3" />

    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>