<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/checkbox_header"
        android:textAppearance="?attr/textAppearanceOverline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox_checked"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <CheckBox
        android:id="@+id/checkBoxUnselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/checkbox_unchecked"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxSelected"
        app:layout_constraintStart_toEndOf="@+id/checkBoxSelected"
        app:layout_constraintTop_toTopOf="@+id/checkBoxSelected" />

    <CheckBox
        android:id="@+id/checkBoxDisabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:enabled="false"
        android:text="@string/checkbox_disabled"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxUnselected"
        app:layout_constraintStart_toEndOf="@+id/checkBoxUnselected"
        app:layout_constraintTop_toTopOf="@+id/checkBoxUnselected" />
</androidx.constraintlayout.widget.ConstraintLayout>