<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/switch_header"
        android:textAppearance="?attr/textAppearanceOverline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/switch_on"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/switch_off"
        app:layout_constraintBottom_toBottomOf="@+id/switchOn"
        app:layout_constraintStart_toEndOf="@+id/switchOn"
        app:layout_constraintTop_toTopOf="@+id/switchOn" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDisabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/switch_disabled"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/switchOff"
        app:layout_constraintStart_toEndOf="@+id/switchOff"
        app:layout_constraintTop_toTopOf="@+id/switchOff" />
</androidx.constraintlayout.widget.ConstraintLayout>